--- a/css-bootstrap-like-grid.scss
+++ b/css-bootstrap-like-grid.scss
@@ -1,3 +1,5 @@
+@charset 'UTF-8';
+
 /*!
  * CSS Bootstrap-like Grid (https://github.com/fiskhandlarn/cssbootstraplikegrid)
  * Copyright Oskar Joelson <oskar@joelson.org>
