--- a/mixins/_grid.scss
+++ b/mixins/_grid.scss
@@ -51,7 +51,8 @@
 
   @if $isParent {
     @include make-nest-parent($size);
-  } @else {
+  }
+  @else {
     padding-right: $gutter / 2;
     padding-left: $gutter / 2;
   }
@@ -74,7 +75,8 @@
 
   @if $isParent {
     @include make-nest-parent($columns);
-  } @else {
+  }
+  @else {
     padding-right: $gutter / 2;
     padding-left: $gutter / 2;
   }
